<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/zero"
        android:maxLines="1"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="65sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn_ac"
        style="@style/oval_btn"
        android:background="@drawable/gray_btn"
        android:onClick="acClick"
        android:text="@string/ac"
        app:layout_constraintBottom_toBottomOf="@+id/btn_div"
        app:layout_constraintEnd_toStartOf="@+id/btn_neg_pos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_div" />

    <Button
        android:onClick="negPos"
        android:id="@+id/btn_neg_pos"
        style="@style/oval_btn"
        android:background="@drawable/gray_btn"
        android:text="@string/neg_pos"
        app:layout_constraintBottom_toBottomOf="@+id/btn_div"
        app:layout_constraintEnd_toStartOf="@+id/btn_percent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_ac"
        app:layout_constraintTop_toTopOf="@+id/btn_div" />

    <Button
        android:id="@+id/btn_percent"
        android:onClick="percentBtnClick"
        style="@style/oval_btn"
        android:background="@drawable/gray_btn"
        android:text="@string/percent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_div"
        app:layout_constraintEnd_toStartOf="@+id/btn_div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_neg_pos"
        app:layout_constraintTop_toTopOf="@+id/btn_div" />

    <Button
        android:id="@+id/btn_div"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/operation_btn"
        android:onClick="opBtnClick"
        android:text="@string/div"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_percent" />


    <Button
        android:id="@+id/btn_plus"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/operation_btn"
        android:onClick="opBtnClick"
        android:text="@string/plus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_equal"
        app:layout_constraintEnd_toEndOf="@+id/btn_div"
        app:layout_constraintStart_toStartOf="@+id/btn_div" />

    <Button
        android:id="@+id/btn_multiply"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/operation_btn"
        android:onClick="opBtnClick"
        android:text="@string/x"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_minus"
        app:layout_constraintEnd_toEndOf="@+id/btn_div"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_div" />

    <Button
        android:id="@+id/btn_minus"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/operation_btn"
        android:onClick="opBtnClick"
        android:text="@string/minus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus"
        app:layout_constraintEnd_toEndOf="@+id/btn_div"
        app:layout_constraintStart_toStartOf="@+id/btn_div" />

    <Button
        android:id="@+id/btn_six"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_gray_btn"
        android:onClick="digitClick"
        android:text="@string/six"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_three"
        app:layout_constraintEnd_toEndOf="@+id/btn_percent"
        app:layout_constraintStart_toStartOf="@+id/btn_percent" />

    <Button
        android:id="@+id/btn_three"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_gray_btn"
        android:onClick="digitClick"
        android:text="@string/three"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_dot"
        app:layout_constraintEnd_toEndOf="@+id/btn_percent"
        app:layout_constraintStart_toStartOf="@+id/btn_percent" />

    <Button
        android:id="@+id/btn_dot"
        style="@style/oval_btn"
        android:onClick="dotClick"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_gray_btn"
        android:text="@string/dot"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_percent"
        app:layout_constraintStart_toStartOf="@+id/btn_percent" />

    <Button
        android:id="@+id/btn_nine"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_gray_btn"
        android:onClick="digitClick"
        android:text="@string/nine"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_six"
        app:layout_constraintEnd_toEndOf="@+id/btn_percent"
        app:layout_constraintStart_toStartOf="@+id/btn_percent" />

    <Button
        android:id="@+id/btn_eight"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_gray_btn"
        android:onClick="digitClick"
        android:text="@string/eight"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_five"
        app:layout_constraintEnd_toEndOf="@+id/btn_neg_pos"
        app:layout_constraintStart_toStartOf="@+id/btn_neg_pos" />

    <Button
        android:id="@+id/btn_four"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_gray_btn"
        android:onClick="digitClick"
        android:text="@string/four"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_one"
        app:layout_constraintEnd_toEndOf="@+id/btn_ac"
        app:layout_constraintStart_toStartOf="@+id/btn_ac" />

    <Button
        android:id="@+id/btn_one"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_gray_btn"
        android:onClick="digitClick"
        android:text="@string/one"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_zero"
        app:layout_constraintEnd_toEndOf="@+id/btn_ac"
        app:layout_constraintStart_toStartOf="@+id/btn_ac" />

    <Button
        android:id="@+id/btn_tow"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_gray_btn"
        android:onClick="digitClick"
        android:text="@string/tow"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_zero"
        app:layout_constraintEnd_toEndOf="@+id/btn_neg_pos"
        app:layout_constraintStart_toStartOf="@+id/btn_neg_pos" />

    <Button
        android:id="@+id/btn_five"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_gray_btn"
        android:onClick="digitClick"
        android:text="@string/five"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_tow"
        app:layout_constraintEnd_toEndOf="@+id/btn_neg_pos"
        app:layout_constraintStart_toStartOf="@+id/btn_neg_pos" />

    <Button
        android:id="@+id/btn_seven"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_gray_btn"
        android:onClick="digitClick"
        android:text="@string/seven"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_four"
        app:layout_constraintEnd_toEndOf="@+id/btn_ac"
        app:layout_constraintStart_toStartOf="@+id/btn_ac" />

    <Button
        android:onClick="equalBtnClick"
        android:id="@+id/btn_equal"
        style="@style/oval_btn"
        android:layout_marginBottom="16dp"
        android:background="@drawable/operation_btn"
        android:text="@string/equals"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_div"
        app:layout_constraintStart_toStartOf="@+id/btn_div" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/zero_btn"
        android:onClick="digitClick"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/zero"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_neg_pos"
        app:layout_constraintStart_toStartOf="@+id/btn_ac" />


</androidx.constraintlayout.widget.ConstraintLayout>